--- a/pages/blog/design-for-healthcare/01-chapter.mdx
+++ b/pages/blog/design-for-healthcare/01-chapter.mdx
@@ -5,7 +5,7 @@ Ontwerpen voor toegankelijkheid maakt de gebruikservaring beter voor iedereen, o
 
 > “Voldoet jullie online platform aan de richtlijnen voor toegankelijkheid?”
 >
-> -- <cite>Gebruiker Platform</cite>
+>  <cite>-- Gebruiker Platform</cite>
 
 Een gebruiker met ‘Niet Aangeboren Hersenletsel’ (NAH) stelde ons deze vraag tijdens een gebruikerstest van het [Jouw Omgeving](https://www.jouwomgeving.nl/) platform. Wij konden, tot onze grote teleurstelling, zijn vraag niet beantwoorden en gingen met meer vragen dan antwoorden naar huis.
 
@@ -26,7 +26,7 @@ Al sinds de opkomst van het internet ontwikkelt het internationaal consortium W3
 > Een succesvolle implementatie van toegankelijkheid in de praktijk is geen technische uitdaging, maar
 > een organisatievraagstuk.
 >
-> -- <cite>Eric Velleman</cite>
+> <cite>Eric Velleman</cite>
 
 Factoren zoals, ontwikkelen en bewustwording van (multidisciplinaire) kennis, betrokkenheid van bestuurders, organisatorische structuur en monitoring en evaluatie, vergroten of verlagen de kans op een succesvolle implementatie aanzienlijk.
 
