WIP blogpost components

--- a/pages/blog/design-for-healthcare/01-chapter.mdx
+++ b/pages/blog/design-for-healthcare/01-chapter.mdx
@@ -1,11 +1,12 @@
 import TableOfContentSection from "../../../components/toc/TableOfContentSection.tsx";
 
-<TableOfContentSection chapter="1" topic="Ontwerpen voor toegankelijkheid">
+<TableOfContentSection chapter="chapter-01" topic="Ontwerpen voor toegankelijkheid">
 Ontwerpen voor toegankelijkheid maakt de gebruikservaring beter voor iedereen, ongeacht beperking. In dit artikel lees je wat digitale toegankelijkheid betekent voor een gebruiker, waarom het verstandig is om hier gericht voor te ontwerpen en waar je kunt beginnen met de implementatie.
 
 > “Voldoet jullie online platform aan de richtlijnen voor toegankelijkheid?”
 >
->  <cite>-- Gebruiker Platform</cite>
+> {" "}
+> <cite>-- Gebruiker Platform</cite>
 
 Een gebruiker met ‘Niet Aangeboren Hersenletsel’ (NAH) stelde ons deze vraag tijdens een gebruikerstest van het [Jouw Omgeving](https://www.jouwomgeving.nl/) platform. Wij konden, tot onze grote teleurstelling, zijn vraag niet beantwoorden en gingen met meer vragen dan antwoorden naar huis.
 
