finish v1.0 blogpost components

--- a/pages/blog/living-with-a-linear-mind-in-an-exponential-age/01-chapter.mdx
+++ b/pages/blog/living-with-a-linear-mind-in-an-exponential-age/01-chapter.mdx
@@ -20,6 +20,8 @@ Like our mind, most legacy institutions, social norms, policies and organisation
 
 To thrive in disruptive times, we need entirely new models and learning systems that last throughout our lives. Instead of a single *'timebox*' of education at the beginning of our lives, we likely need a model of continuous self-education, also known as _lifelong learning_ (Gary Bolles, 2017). Thus, our ability to capture, organise and retrieve our ideas and apply and transfer them effectively from project to project and company to company has become more critical than ever. To facilitate this process, I believe every person needs _some sort of personal knowledge capture system_ that can adapt to our changing needs, as it is meant to serve a lifetime of learning and growth. Not having such a system means you are not fully leveraging what you learn. You are not collecting your ideas and making valuable connections between them.
 
-You may think this sounds abstract and think, why do I need this, and where do I start? The good news is that it doesn't have to be complicated. Keep doing what you would anyway: read, think, and write. However, take structured notes along the way and save them through a standardised workflow that fits your needs. This guide will first cover the need and purpose of personal knowledge management and elaborate on the key concepts and fundamental principles for efficiently turning your thoughts, ideas and discoveries into a structured treasure of intelligent and interconnected knowledge. In the second part of his series, you can read along with how I will apply these principles to set up my workflow and personal knowledge management (PKM) system in [Capacities.](https://capacities.io/)
+You may think this sounds abstract and think, why do I need this, and where do I start? The good news is that it doesn't have to be complicated. Keep doing what you would anyway: read, think, and write. However, take structured notes along the way and save them through a standardised workflow that fits your needs. This article will first cover the need and purpose of personal knowledge management and elaborate on the key concepts and fundamental principles for efficiently turning your thoughts, ideas and discoveries into a structured treasure of intelligent and interconnected knowledge.
+
+In the second part of his series, you can read along with how I will apply these principles to set up my workflow and personal knowledge management (PKM) system in [Capacities.](https://capacities.io/)
 
 </TableOfContentSection>
