--- a/pages/blog/living-with-a-linear-mind-in-an-exponential-age/01-chapter.mdx
+++ b/pages/blog/living-with-a-linear-mind-in-an-exponential-age/01-chapter.mdx
@@ -4,11 +4,13 @@ import TableOfContentSection from "../../../components/toc/TableOfContentSection
 	
 ### A Growing Divide
 
-[Raoul Pal](https://app.capacities.io/789f7b14-1e17-43f4-adfa-3635d606c49d/a82651eb-5406-4fdc-bb12-151da302876e) describes the 2020s as *"The Exponential Age"*: an era that is characterised by a range of new technologies that are converging the physical, digital and biological worlds, impacting all disciplines, economies and industries, and even challenging ideas about what it means to be human ([Singularity](https://app.capacities.io/789f7b14-1e17-43f4-adfa-3635d606c49d/d30bc384-c0d2-4b9d-8b56-6d4bb00c6681)). Simply put, it refers to the notion that things are changing faster and faster, also known as exponential change. And that concept is challenging to grasp as our brains think very linearly. A perfect illustration of this cognitive limitation was that policymakers didn't fathom Covid's exponential growth during the pandemic. Our brain looks for patterns based on what we know and understand and is near us in a small timeframe. So we add items up when we should be multiplying them instead.
+[Raoul Pal](https://app.capacities.io/789f7b14-1e17-43f4-adfa-3635d606c49d/a82651eb-5406-4fdc-bb12-151da302876e) describes the 2020s as *"The Exponential Age"*: an era that is characterised by a range of new technologies that are converging the physical, digital and biological worlds, impacting all disciplines, economies and industries, and even challenging ideas about what it means to be human ([Singularity](https://app.capacities.io/789f7b14-1e17-43f4-adfa-3635d606c49d/d30bc384-c0d2-4b9d-8b56-6d4bb00c6681)). 
+
+Simply put, it refers to the notion that things are changing faster and faster, also known as exponential change. And that concept is challenging to grasp as our brains think very linearly. A perfect illustration of this cognitive limitation was that policymakers didn't fathom Covid's exponential growth during the pandemic. Our brain looks for patterns based on what we know and understand and is near us in a small timeframe. So we add items up when we should be multiplying them instead.
 
 > There is an ever-growing gap between the increased pace of change and our society’s ability to keep up
 >
-> <cite>-- Exponential Change</cite>
+> <cite>-- Nature of Exponential Change</cite>
 
 Like our mind, most legacy institutions, social norms, policies and organisations are not designed for the exponential age. They often need to catch up to adapt. As a result, there is an ever-growing gap between the increased pace of change and our society's ability to keep up. This transition from the industrial age to the exponential age also dramatically influences the nature of our work: an increase in job hopping, the unbundling, automation and globalisation of jobs and a growing skills gap in the global workforce. We can now expect to spend only a few months to a few years with one organisation.
 
