work on blogpost design for healthcare

--- a/pages/blog/design-for-accessibility/01-chapter.mdx
+++ b/pages/blog/design-for-accessibility/01-chapter.mdx
@@ -1,6 +1,9 @@
 import TableOfContentSection from "../../../components/toc/TableOfContentSection.tsx";
 
 <TableOfContentSection chapter="chapter-01" topic="Ontwerpen voor toegankelijkheid">
+
+### Ontwerpen voor toegankelijkheid
+
 Ontwerpen voor toegankelijkheid maakt de gebruikservaring beter voor iedereen, ongeacht beperking. In dit artikel lees je wat digitale toegankelijkheid betekent voor een gebruiker, waarom het verstandig is om hier gericht voor te ontwerpen en waar je kunt beginnen met de implementatie.
 
 > “Voldoet jullie online platform aan de richtlijnen voor toegankelijkheid?”
@@ -13,7 +16,10 @@ Een gebruiker met ‘Niet Aangeboren Hersenletsel’ (NAH) stelde ons deze vraag
 
 </TableOfContentSection>
 
-<TableOfContentSection chapter="1" topic="Het Probleem">
+<TableOfContentSection chapter="chapter-01" topic="Het probleem">
+
+### Het probleem
+
 Op de terugreis wijst een snelle zoekopdracht uit dat digitale toegankelijkheid in de zorg nog eerder uitzondering is dan regel. Sinds juli 2016 is in Nederland het _“VN-verdrag voor Rechten van Personen met een handicap”_ in werking getreden ([VN Verdrag, 2016](https://www.mensenrechten.nl/en/node/918)). Dit verdrag benadrukt onder andere de toegang tot informatie- en communicatietechnologieën als een fundamenteel mensenrecht. In Nederland is er additionele wetgeving van kracht die alle (semi)overheid organisaties verplicht om haar websites voor 2020 toegankelijk te maken ([Digitaleoverheid, 2019](https://www.digitaleoverheid.nl/overzicht-van-alle-onderwerpen/toegankelijkheid/digitoegankelijkheid/)).
 
 Ondanks deze wetgeving is er in de afgelopen vier jaar nog maar weinig vooruitgang geboekt. Een aantal onderzoeken wijzen uit dat publieke (zorg)websites en apps nog (ver) achter blijven op het gebied van toegankelijkheid voor mensen met een beperking ([Accessibility, 2018](https://www.accessibility.nl/nieuws/2018/01/digitale-toegankelijkheid-in-de-zorg-kan-beter); [Schellevis, 2018](https://nos.nl/artikel/2213251-vrijwel-alle-zorgsites-schieten-tekort-voor-blinden-en-doven.html); [Kastelijn, 2018](https://nos.nl/artikel/2252987-webwinkels-slecht-toegankelijk-voor-blinden-ik-verzuip-in-zo-n-site.html)). Dit betekent in de praktijk dat mensen met een beperking helemaal niet, of onvoldoende zelfstandig gebruik kunnen maken van deze websites en apps.
@@ -22,7 +28,10 @@ Hoe kan het dat iets dat wettelijk verplicht is nog maar door zo weinig organisa
 
 </TableOfContentSection>
 
-<TableOfContentSection chapter="1" topic="Complex organisatorish vraagstuk">
+<TableOfContentSection chapter="chapter-01" topic="Complex organisatorish vraagstuk">
+
+### Complex organisatorish vraagstuk
+
 Al sinds de opkomst van het internet ontwikkelt het internationaal consortium W3C ([W3C, 1994](https://www.w3.org/)) standaarden voor het web. Onder deze standaarden vallen ook de _“Web Content Accessibility Guidelines (WCAG)”_ die een groot aantal richtlijnen bevatten om digitale diensten toegankelijk te maken ([W3C, 2019](https://www.w3.org/)). Deze standaarden zijn openbaar beschikbaar, bevatten zeer gedetailleerde documentatie voor de verschillende stakeholders en beschrijven hoe herkenbare _“user interface”_ patronen geïmplementeerd kunnen worden. Maar als alle technische kennis en regels al zo lang aanwezig zijn, waarom is het grootste gedeelte van de (zorg)websites en apps dan nog steeds niet toegankelijk? Velleman ([Eric Velleman, 2018](https://www.accessibility.nl/content/documents/PROEFSCHRIFT_ERIC_VELLEMAN_def.pdf)) stelt in zijn onderzoek over toegankelijkheid van websites binnen gemeenten dat het technische gedeelte maar een klein onderdeel van een grotere en complexere puzzel is.
 
 > Een succesvolle implementatie van toegankelijkheid in de praktijk is geen technische uitdaging, maar
