--- a/pages/blog/design-for-accessibility/02-chapter.mdx
+++ b/pages/blog/design-for-accessibility/02-chapter.mdx
@@ -1,14 +1,22 @@
+import TableOfContentSection from "../../../components/toc/TableOfContentSection.tsx";
+
+<TableOfContentSection chapter="chapter-02" topic="Wat betekent digitale toegankelijkheid?">
+	
 ### Wat betekent digitale toegankelijkheid?
 
 In de afgelopen jaren is in onze samenleving veel dienstverlening gedigitaliseerd: ‘97% van de Nederlanders beheert inmiddels zijn bankzaken online ([Banken, 2017](https://www.banken.nl/nieuws/20504/nederlandse-consumenten-meest-actief-met-online-bankieren))’. De belastingdienst heeft zijn blauwe enveloppen bijna met pensioen gestuurd en stapt binnenkort volledig over op digitale post. Ook in de zorg regelt een groot deel van de Nederlanders hun zaken inmiddels online: ze sluiten online een zorgverzekering af, maken een e-afspraak met hun huisarts of chatten anoniem met zorgprofessionals. Sinds de hervorming van het Nederlandse zorgstelsel in 2015 verwacht de overheid ook steeds meer eigen regie, zelfredzaamheid, keuzevrijheid en verantwoordelijkheid ([De Vries & Kossen, 2015](https://www.managementboek.nl/e-book/9789082329360/zo-werkt-de-zorg-in-nederland-maaike-de-vries)). Al deze nieuwe digitale mogelijkheden zijn bij uitstek geschikt om een bijdrage te leveren aan betere toegang tot dienstverlening en meer eigen regie en zelfredzaamheid. Maar zodra iets online staat, betekent dit niet gelijk dat het beter toegankelijk is of gemakkelijker in gebruik.
 
 Een van de mogelijke keerzijden van digitalisering is dat het verschillen tussen kwetsbare en niet-kwetsbare groepen kan vergroten. Een belangrijke voorwaarde voor zelfredzaamheid is dat personen in staat zijn om zelfstandig gebruik te kunnen maken van alle vormen van publieke dienstverlening. Op dit vlak gaat het in de praktijk nog vaak mis. Het blijkt dat bijna alle publieke (zorg)websites en apps nog tekort schieten op het gebied van toegankelijkheid voor laaggeletterden en mensen met een beperking ([Accessibility, 2018](https://www.accessibility.nl/nieuws/2018/01/digitale-toegankelijkheid-in-de-zorg-kan-beter)). Daarnaast is het onbekend hoeveel van de tientallen gesloten patiënt- en cliëntportalen en Persoonlijke Gezonheidsomgevingen (PGO’s) toegankelijk zijn. Maar wat betekent het eigenlijk voor een gebruiker wanneer iets niet toegankelijk is?
 
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-02" topic="Toegankelijkheid is inclusief">
+
 ### Toegankelijkheid is inclusief
 
 Toegankelijkheid betekent mensen niet buitensluiten op basis van hun beperking(en). Personen kunnen zelfstandig een taak kunnen volbrengen in een vergelijkbare hoeveelheid tijd en moeite als iemand die geen beperking heeft. Een taak kan bijvoorbeeld zijn: “Het online aanvragen van een zorgverzekering”. Om deze taak goed af te ronden, zijn er vier essentiële voorwaarden waaraan voldaan moet worden [(Duggin, 2016)](https://accessibility.blog.gov.uk/2016/05/16/what-we-mean-when-we-talk-about-accessibility-2/). Deze vier principes vormen de basis van de _“Web Content Accessibility Guidelines”:_
 
-![De vier principes voor toegankelijkheid](/blog/design-for-healthcare/four-principles.png)
+![De vier principes voor toegankelijkheid](/blog/design-for-accessibility/four-principles.png)
 
 - **Perceivable** — Informatie moet waarneembaar zijn voor iemand. In andere woorden, het is waarneembaar voor een van de zintuigen van een persoon _(zien, horen of aanraken)_. Tekstuele informatie moet in verschillende vormen aangeboden worden zodat deze ook toegankelijk is voor mensen met een audiovisuele beperking. Als iemand blind is, moet de tekst zo opgebouwd zijn dat een schermlezer het om kan zetten naar een geschikt audioformaat of naar aanraking zodra iemand een elektronisch braille apparaat gebruikt.
 - **Understandable** — Informatie moet begrijpelijk zijn. Dit betekent dat informatie aansluit op het kennisniveau van de gebruikers en een logische structuur heeft. Voor mensen die moeite hebben met het verwerken van tekst, moet deze aangeboden worden in een taalniveau die voor hen te begrijpen is.
@@ -16,6 +24,10 @@ Toegankelijkheid betekent mensen niet buitensluiten op basis van hun beperking(e
 - **Robust** — Als laatste moet een website robuust zijn. Dit betekent dat een webpagina hetzelfde blijft functioneren ongeacht de omstandigheden _(webbrowser)_ en apparatuur _(mobiel, schermlezer)_ waarmee een gebruiker de webpagina bezoekt.
 
 Als een van deze vier voorwaarden mislukt, dan kan een persoon de taak: _“Het online afsluiten van een zorgverzekering”_ niet voltooien. Daarom liggen bovenstaande vier principes aan de basis van de _“Web Content Accessibility Guidelines”_. Door tijdens de ontwikkeling van een webapplicatie deze richtlijnen consequent toe te passen, ontwerp je inclusief.
+
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-02" topic="Toegankelijkheid is contextafhankelijk">
 
 ### Toegankelijkheid is contextafhankelijk
 
@@ -31,12 +43,18 @@ Een beperking is breder dan alleen een gezondheidsprobleem. Het is een complex f
 
 Ontwikkelaars moeten producten en diensten afstemmen op de verschillende niveaus van (functionele) vaardigheden van mensen en op de omgevingen waarin deze gebruikt worden. Door rekening te houden met deze diversiteit, maak je de gebruikservaring beter voor iedereen die het product gebruikt.
 
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-02" topic="Toegankelijkheid is keuzevrijheid hebben">
+
 ### Toegankelijkheid is keuzevrijheid hebben
 
 Er zijn diverse redenen waarom een persoon niet aan de slag kan met een e-health toepassing. De applicatie kan niet gebruiksvriendelijk genoeg zijn, niet goed aansluiten op het kennisniveau van een gebruiker of is speciaal afgestemd op de wensen van een (hele) specifieke doelgroep. Vanuit ethisch perspectief kunnen we ons tevens afvragen of iedereen de vraag om meer zelf te doen aan kan en of e-health daar dan het juiste middel voor is. Evelien Tonkens gaat daar in [dit artikel](https://decorrespondent.nl/10902/in-een-welvarend-land-wordt-de-zorg-steeds-duurder-niks-mis-mee-zegt-deze-hoogleraar/447069216-5f3c3ba3) dieper op in en stelt zelfs dat keuzevrijheid binnen de zorg een fantasie is:
 
 > We moeten keuzes maken over dingen die we niet begrijpen, op basis van situaties die we niet kunnen voorspellen, met geld dat we niet hebben of dat we liever ergens anders aan uitgeven
 >
-> -- <cite>Evelien Tonkens</cite>
+> <cite>-- Evelien Tonkens</cite>
 
 Ongeacht deze terechte ethische discussie, blijft het uitgangspunt van toegankelijkheid dat een beslissing om een toepassing wel of niet te gebruiken vooral gebaseerd moet zijn op de behoeften en voorkeuren van gebruikers en niet op hun fysieke (on)mogelijkheden. Hierbij maakt het niet uit wie of welke partij de beslissing neemt, als mensen maar niet bij voorbaat buitengesloten worden door een beperking.
+
+</TableOfContentSection>
