--- a/pages/blog/design-for-accessibility/03-chapter.mdx
+++ b/pages/blog/design-for-accessibility/03-chapter.mdx
@@ -1,20 +1,36 @@
-## Meerwaarde
+import TableOfContentSection from "../../../components/toc/TableOfContentSection.tsx";
+
+### Welke meerwaarde levert het op?
 
 Waarom zouden we moeten ontwerpen voor toegankelijkheid? Welke meerwaarde levert het ons als bedrijf op? Het ontwikkelen van online diensten in de zorg brengt al genoeg uitdagingen met zich mee: _privacy, terminologie, wetgeving, transparantie, versplinterde werkprocessen, gesloten systemen, tegenstrijdige belangen (en Internet Explorer … )._ Zouden we ons om nog een ‘extra’ ding druk moeten maken? Ja, want:
+
+<TableOfContentSection chapter="chapter-03" topic="Kleine aanpassingen, grote impact">
 
 ### Kleine aanpassingen, grote impact
 
 Vroeg of laat komt iedereen tijdens zijn leven in aanraking met de zorg: in de rol van mantelzorger, door eigen ziekte of beperking of door ouderdom. Meer dan de helft van de bevolking ouder dan 65 jaar ervaart een vorm van een handicap. Waar sommigen bevoorrecht zijn met een relatief lang en gezond leven, hebben anderen minder geluk en worden of zijn ze door ziekte of beperking voor de rest van hun leven (volledig) afhankelijk van zorg. Wanneer dit gebeurt, wil je met zo weinig mogelijk gedoe goede zorg kunnen regelen voor jezelf of een ander. Het leren leven met een beperking is al moeilijk genoeg. Dus als je met een paar “kleine” aanpassingen het leven van deze mensen makkelijker kan maken, dan moet je dat gewoon doen.
+
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-03" topic="Wetgeving">
 
 ### Wetgeving
 
 Via het “**[Tijdelijk Besluit Digitale Toegankelijkheid Overheid (2018)](https://www.digitoegankelijk.nl/beleid/wet-en-regelgeving/huidig-beleid-besluit-digitale-toegankelijkheid)**” wordt het toepassen van de WCAG een wettelijke verplichting voor alle overheidsorganisaties. Vanaf september 2020 moeten websites van overheidsorganisaties voldoen aan de eisen en vanaf juni 2021 ook alle mobiele applicaties. Hoewel er voor de zorgsector nog geen specifieke wetgeving is, heeft het [Informatieberaad Zorg](https://www.informatieberaadzorg.nl/actueel/nieuws/2018/12/12/digitale-toegankelijkheid-in-de-zorg-wordt-het-nieuwe-normaal) besloten de WCAG toe te laten tot het duurzaam informatiestelsel. Met dit besluit hebben zorgaanbieders, zorgverzekeraars en het VWS uitgesproken dat digitale zorginformatie voor iedereen bruikbaar moet zijn.
 Daarnaast gaan zorginstellingen en verzekeraars hun ICT-leveranciers vragen om bij het realiseren en onderhouden van apps en websites aan te sluiten bij de WCAG. Als leverancier van een online platform aan gemeenten en zorginstellingen, is het dus van cruciaal belang voor ons om aan te sluiten bij deze wetgeving.
 
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-03" topic="Betere gebruikservaring voor iedereen">
+
 ### Betere gebruikservaring voor iedereen
 
 Als je kijkt naar de richtlijnen waaraan je moet voldoen om een website of app toegankelijk te maken dan lijkt dit in eerste instantie erg limiterend. In de praktijk blijkt echter het tegenovergestelde waar. Het consequent toepassen van deze regels in het ontwerp- en ontwikkelproces maakt de gebruikservaring beter voor iedereen, ook voor mensen die geen beperking hebben. Beeldschermen met een hoog contrast zijn aanvankelijk ontworpen voor mensen met een visuele beperking. Tegenwoordig profiteert bijna iedereen van deze uitvinding zodra ze een apparaat gebruiken in fel zonlicht. Hetzelfde geldt voor afstandsbedieningen, automatische deuropeners en audioboeken.
 Door bewust na te denken over het brede spectrum van permanente, tijdelijke en situationele beperkingen ontstaat er nieuw inzicht in hoe een product of dienst kan schalen naar — *en bruikbaar kan zijn voor* — een veel bredere doelgroep.
+
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-03" topic="Waardecreatie voor het bedrijf">
 
 ### Waardecreatie voor het bedrijf
 
@@ -25,3 +41,5 @@ Uitspraken zoals _“Toegankelijke oplossingen maken is te duur en te complex”
 - **Marktbereik vergroten** — De markt voor mensen met een beperking is groot en bestaat wereldwijd uit meer dan 1 miljard mensen die samen een koopkracht hebben van ongeveer 600 miljard euro.
 - **Minimaliseer juridisch risico** — Steeds meer landen hebben wetgeving die toegankelijkheid afdwingt. Dit maakt de juridische risico’s voor bedrijven die toegankelijkheid negeren steeds groter. Door als bedrijf actief beleid en programma’s op te stellen, verklein je het risico op gerechtelijke vervolging en reputatieschade.
 - **Kwaliteit verhogen** — Het toepassen van open standaarden resulteert in gestructureerde en toekomstbestendige code die gemakkelijker te begrijpen is voor zowel personen als computers _(bijvoorbeeld voor spraaksoftware)._
+
+</TableOfContentSection>
