--- a/pages/blog/design-for-accessibility/04-chapter.mdx
+++ b/pages/blog/design-for-accessibility/04-chapter.mdx
@@ -1,45 +1,64 @@
-## Waar begin je met de (technische) implementatie?
+import TableOfContentSection from "../../../components/toc/TableOfContentSection.tsx";
+
+<TableOfContentSection chapter="chapter-04" topic="Implementatie">
+	
+### Implementatie
 
 Het bovenstaande maakt duidelijk dat het belang en de toegevoegde waarde van toegankelijkheid voor gebruikers en bedrijven buiten kijf staat. Maar, hoe realiseer en verifieer je als dienstverlener toegankelijkheid in eigen producten en diensten? De hoeveelheid informatie rondom de implementatie is overweldigend en overstijgt verschillende disciplines en domeinen. Dit maakt het een uitdaging om met toegankelijkheid te beginnen, want wie is waar verantwoordelijk voor? Het laatste deel van dit artikel beschrijft welke middelen wij toepassen om het Jouw Omgeving platform beter toegankelijk te maken.
+
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-04" topic="De anatomie van het web">
 
 ### De anatomie van het web
 
 Om beter te begrijpen waarom een webapplicatie wel of niet toegankelijk is, is het belangrijk om op hoofdlijnen te begrijpen hoe deze werken. Een webapplicatie is opgebouwd uit vele (complexe) lagen en componenten die met elkaar interacteren. Een website kan in dat opzicht vergeleken worden met de fysiologie van het menselijk lichaam. Belangrijke onderdelen zijn:
 
 - **Skelet** = **_‘Structural Markup’_** - Het menselijk skelet bestaat uit botten die onze basisvorm definiëren. Hetzelfde geldt voor websites waarin een _‘structurele opmaaktaal’_ (zoals HTML) de inhoud structureert. Een taal bestaat vaak uit verschillende elementen die — *net zoals botten* — elk een specifiek doel dienen en samen de _‘lay-out’_ van een website bepalen.
-
 - **Hersenen** = **_“Server-side Scripting”_** - Met je brein kun je denken, dingen onthouden en beslissingen nemen in complexe situaties. Op het web worden deze taken vervult door een webserver. Op deze server wordt informatie opgeslagen in een database totdat deze weer wordt opgevraagd, overschreven of verwijderd. Op de server bevindt zich tevens alle logica die — *op basis van input* — automatisch een of meerdere beslissing kan nemen.
-
 - **Zenuwen** = **_‘Web Browser’_** - Omdat er interactie plaatsvindt op een website moet er — *afhankelijk van de actie die uitgevoerd is door de gebruiker* — informatie naar de server verzonden en/of ontvangen worden. In het menselijk lichaam worden deze verzoeken verzonden als elektrische signalen die een actie uitvoeren ergens in het lichaam. In het geval van een website verzend de code een signaal naar de browser om bijvoorbeeld data te verzenden of structurele- of stijlwijzingen uit te voeren.
-
 - **Spieren** = **_‘Client-side Scripting’_** - Zonder spieren kunnen we gedachten niet in een reactie veranderen. Spieren spelen een rol in beweging en interactie. _‘Scripttalen’_ (zoals JavaScript) zijn de spieren van het web en zorgen dat interactie mogelijk is wanneer gebruikers klikken, hun muis bewegen of op het toetsenbord drukken. Het maakt een website bedienbaar.
-
 - **Huid** = **_‘Aesthetics’_** - De huid speelt een belangrijk rol in hoe iemand eruit ziet. Het uiterlijk op het web wordt primair bepaalt door een visuele opmaaktaal (zoals CSS). Deze taal _‘hecht’_ zich — *net zoals de huid zich hecht aan spieren en botten* — aan onderliggende elementen en beschrijft hoe elementen visueel weergegeven moeten worden aan de gebruiker.
 
 Webapplicaties zijn dus net als mensen opgebouwd uit vele interacterende onderdelen. In elk onderdeel kunnen zich een of meerdere problemen voordoen, waardoor iets minder goed of helemaal (on)bruikbaar wordt. Elke keuze die tijdens de ontwikkeling gemaakt wordt, heeft daarom invloed op de toegankelijkheid. Een ontwerper heeft een kleurenpallet met te weinig contrast gekozen, een developer heeft geen label op een knop gezet en een tekstschrijver heeft te moeilijke woorden gebruikt. Dit zijn gegeneraliseerde voorbeelden, maar illustreren goed dat toegankelijkheid verschillende disciplines en domeinen overstijgt.
+
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-04" topic="Waar komen we vandaan?">
 
 ### Waar komen we vandaan?
 
 Jouw Omgeving bestaat bijna 10 jaar. In deze periode is er veel ontwikkeld aan ons platform: nieuwe functies zijn toegevoegd, oude functies herschreven en ook de techniek staat niet stil. Tijdens de ontwikkeling zijn veel verschillende stakeholders betrokken (geweest). Een verscheidenheid aan zorgorganisaties, zorgprofessionals, eindgebruikers en teamleden werken vanuit hun eigen denkkader en discipline samen aan de doorontwikkeling van ons platform. Hieruit zijn heel veel mooie functionaliteiten voortgekomen, maar het snelle ontwikkeltempo heeft er helaas — *bij gebrek aan een eenduidig referentiekader* — ook voor gezorgd dat toegankelijkheid niet altijd prioriteit had en/of zelfs helemaal niet bekend was bij het ontwikkelteam en andere betrokken stakeholders. Hierdoor zijn veel onderdelen van het platform nog niet toegankelijk.
 
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-04" topic="Waar willen we naar toe?">
+
 ### Waar willen we naar toe?
 
 Bij Jouw Omgeving willen we toegankelijke oplossingen bieden waarmee iedereen zelf veilig, plezierig en transparant kan samenwerken aan de eigen gezondheid of die van een ander. Iedereen die het Jouw Omgeving platform gebruikt, moet zich welkom voelen. Om dit te kunnen bereiken, streven we ernaar om te voldoen aan de [WCAG — Level AA.](https://www.w3.org/TR/WCAG21/)
+
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-04" topic="Hoe gaan we dat doen?">
 
 ### Hoe gaan we dat doen?
 
 Sinds de zomer van 2018 zijn we intern bezig met de ontwikkeling van een design systeem voor ons platform. Een design systeem is een verzameling van herbruikbare componenten die voldoen aan heldere regels en internationale standaarden en in samenhang een interface vormen. Het doel van het design systeem is om een _‘gezamenlijke taal’_ te creëren en beheren waarmee ontwerpers, ontwikkelaars en andere teamleden toegankelijke en consistente gebruikerservaringen kunnen bouwen voor onze eindgebruikers. Het is als het ware een _‘bak met legosteentjes’_ waarmee producten en nieuwe functionaliteiten ontworpen en gerealiseerd kunnen worden. Door toegankelijkheid een fundamenteel onderdeel te laten uitmaken van het design systeem, is de kans groter dat wij deze structureel waarborgen. Naast toegankelijkheid levert een design systeem de volgende voordelen:
 
 - **Consistente interface en navigatie** — Door vanuit een ‘_single-source of truth’_ te werken, wordt de consistentie verhoogd en de gebruikerservaring verbetert. Het ontwerp ziet er door de herbruikbare componenten op iedere plek hetzelfde uit. Door dezelfde interactie en navigatiepatronen toe te passen, wordt een meer uniforme gebruikerservaring gecreëerd. De herkenbaarheid wordt verhoogd, waardoor gebruikers sneller leren hoe een systeem werkt.
-
 - **Kwaliteit** — Door gebruik te maken van standaarden en _“best practices”_ wordt de kwaliteit van het systeem verhoogt. Componenten zijn opgebouwd op basis van standaarden, goed gedocumenteerd, uitvoerig getest en werken altijd op een eenduidige manier.
-
 - **Snelheid** — Het ontwerpproces van (nieuwe) functionaliteiten wordt versneld omdat iedereen vanuit eenzelfde referentiekader werkt. Communicatie tussen ontwerpers en developers wordt vereenvoudigd en er kunnen sneller prototypes gemaakt en gevalideerd worden met de klant en eindgebruikers.
-
 - **Responsive** — De componenten uit het design systeem zijn geoptimaliseerd voor het gebruik op apparaten met verschillende schermgroottes.
+
+</TableOfContentSection>
+
+<TableOfContentSection chapter="chapter-04" topic="Waar staan we nu?">
 
 ### Waar staan we nu?
 
 Een design systeem is niet van de ene op de andere dag te implementeren. Het is een erg arbeidsintensief proces. We passen daarom een _‘slow drip’_ methode toe. Componenten worden stapsgewijs ontwikkeld en geïmplementeerd in de interface van ons platform. Het is belangrijk om te beseffen dat de toepassing van een design systeem, met toegankelijkheid als fundament, niet automatisch resulteert in een toegankelijk product. Als ontwikkelteam moeten we het systeem configureren, meerdere toegankelijke componenten samenstellen en deze vervolgens per gebruiksscenario documenteren en op maat implementeren. Het is een continu proces, waaraan elke discipline binnen het bedrijf actief een eigen bijdrage moet leveren: van kennis eigen maken en op peil houden, tot functionele eisen en acceptatiecriteria opnemen in ontwerp documentatie en het opnemen van toegankelijkheid in offertes.
 
 Het doel is om dit jaar een _“Alpha”_ versie van het design systeem te lanceren. Hiermee hopen we een solide basis te leggen waarmee we op een relatief snelle manier, toegankelijke oplossingen kunnen realiseren. Op de lange termijn willen we het design systeem _“Open Source”_ maken waardoor ook andere partijen kunnen profiteren van onze kennis en ook zelf actief een bijdrage kunnen leveren aan de verbetering van het systeem.
+
+</TableOfContentSection>
