WIP blogpost linear mind

--- a/pages/blog/living-with-a-linear-mind-in-an-exponential-age/02-chapter.mdx
+++ b/pages/blog/living-with-a-linear-mind-in-an-exponential-age/02-chapter.mdx
@@ -14,7 +14,7 @@ Research indicates that knowledge workers spend a great deal of their time - **
 
 In its essence, no matter what our formal role title is, knowledge work is about coming up with new ideas, solving novel problems and communicating effectively. Information is a fundamental building block in this inherently creative process. Besides, anything you want to accomplish in your personal and professional life requires you to efficiently turn your thoughts, ideas and discoveries into helpful knowledge. Yet, in today's digital age, where information is more accessible than ever, we are paralysed with indecision on where to focus our attention. We consume the equivalent of 174 entire newspapers daily, five times higher than in 1986.
 
-Thus, the ability to intentionally and strategically allocate our attention is a competitive advantage in a distracted world. Time and attention are your most scarce and precious resources as a knowledge worker.
+Thus, the ability to intentionally and strategically allocate our attention can be a competitive advantage in a distracted world, as time and attention are one of your most scarce and precious resources as a knowledge worker.
 
 </TableOfContentSection>
 
