--- a/pages/blog/living-with-a-linear-mind-in-an-exponential-age/05-chapter.mdx
+++ b/pages/blog/living-with-a-linear-mind-in-an-exponential-age/05-chapter.mdx
@@ -6,29 +6,38 @@ import TableOfContentSection from "../../../components/toc/TableOfContentSection
 
 As we have covered the need and purpose of personal knowledge management and elaborated on the key concepts and fundamental principles, we can derive a checklist and memory aid to support us in part two of this series.
 
-#### The Needs
+#### Why Knowledge Management?
 
-- In the exponential age, our ability to capture, organise and retrieve our ideas and apply and transfer them effectively from project to project and company to company has become more critical than ever.
+- Converging physical, digital, and biological worlds
+- Exponential change challenges linear thinking
+- Legacy institutions struggle to adapt to exponential age; growing gap in society's ability to keep up
+- The transition to the exponential age affects work: job hopping, automation, globalization, skills gap
+- Need for lifelong learning and personal knowledge capture systems to thrive in disruptive times
 - Knowledge workers spend a great deal of their time - an average of 40% - looking for information and discretionary activities that offer little personal satisfaction.
+
+#### Externalise and Write
+
 - To have a clear and focused mind, we need to externalise our thoughts out of our heads and into our external memory system.
 - Writing is, without question, the best facilitator for thinking, reading, learning, understanding and generating ideas we have. Write it down if you want to learn something in the long run.
 
 #### Purpose and Mindsets
 
-- At its core, Personal Knowledge Management is about rethinking your relationship with information and cultivating self-awareness and self-knowledge.
-- Decide your preferred workflow before choosing the tools and techniques.
-- Tools and techniques should ideally be embedded into a standardised workflow to prevent falling back into old habits.
-- A good workflow that works for you is one that provides structure and enables trust and a flow state.
-- A Personal Knowledge Management system can serve many different functions and capabilities, so you should always start with why you need or want to use it in the first place.
-- Your system can look chaotic to others, but it is right for you if it brings you value and delight. Don't let productivity experts tell you otherwise.
+- PKM: long journey of personal growth, mindset shift, and rethinking relationship with information
+- Start with a clear purpose and goals for using a PKM system
+- No one-size-fits-all methods; systems must be tailored to individual needs
+- Keep things simple; avoid tool overload and focus on habit change
+- Good workflows provide structure, trust, and flow, enabling control and focus
+- Implement tools or techniques based on fit with preferred workflow and simplicity
 - Being organised is a habit - a repeated set of actions you take as you encounter, work with and put your information to use.
 
-#### System Design
+#### System Design Principles
 
-- Organise knowledge by balancing structure and flexibility. Structure is important to keep your system manageable, but flexibility is important to keep it dynamic and responsive to change.
-- Apply a bottom-up approach to keep organisation fluid and dynamic. Start with the objects you want to capture and organise and then work your way up to the higher levels of your system.
-- Augment your brain by choosing an application that uses a knowledge graph database and reduce cognitive load by standardising how and in which format you capture object types.
-- Organise your knowledge organically and according to your interests by tagging or assigning keywords to your objects.
+- Balance structure and flexibility in PKM system design
+- Level 1: Top-Down vs Bottom-Up approaches to organisation of knowledge
+- Level 2: Augment Your Brain with tools that mimic cognitive processes
+- Libraries vs Forests: Graph databases resemble brain function and better suit PKM tools
+- Level 3: Standardise the capture of knowledge objects to streamline workflow and reduce cognitive load
+- Your purpose influences your workflow and required objects, types, and tags
 
 In part two of this series, I will apply these principles to determine my intended use cases and workflow and, finally, choose tools and techniques supporting my use cases. We are shifting our focus from why we need personal knowledge management towards how we can implement it into our daily lives.
 
